--- a/tasks/docker_services.yml
+++ b/tasks/docker_services.yml
@@ -1,7 +1,7 @@
 ---
 - name: Create folders for each Docker service
   ansible.builtin.file:
-    path: "{{ config_dir }}/{{ item.name }}"
+    path: "{{ docker_dir }}/{{ item.name }}"
     state: directory
     mode: '0755'
   become: false
@@ -12,7 +12,7 @@
 - name: Copy docker-compose template for each service
   ansible.builtin.template:
     src: "{{ item.template }}"
-    dest: "{{ config_dir }}/{{ item.name }}/docker-compose.yml"
+    dest: "{{ docker_dir }}/{{ item.name }}/docker-compose.yml"
     mode: '0640'
   become: false
   loop: "{{ docker_services }}"
@@ -23,7 +23,7 @@
 
 - name: Ensure each service is running
   community.docker.docker_compose_v2:
-    project_src: "{{ config_dir }}/{{ item.name }}/"
+    project_src: "{{ docker_dir }}/{{ item.name }}/"
     build: never
     remove_orphans: true
   become: false
