--- a/tasks/home_assistant.yml
+++ b/tasks/home_assistant.yml
@@ -1,14 +1,14 @@
 ---
 - name: Create home-assistant folder
   ansible.builtin.file:
-    path: "{{ config_dir }}/home-assistant"
+    path: "{{ docker_dir }}/home-assistant"
     state: directory
     mode: '0755'
   become: false
 
 - name: Create Home Assistant config folder
   ansible.builtin.file:
-    path: "{{ config_dir }}/home-assistant/config"
+    path: "{{ docker_dir }}/home-assistant/config"
     state: directory
     mode: '0755'
   become: false
@@ -16,20 +16,20 @@
 - name: Copy HA backup archive
   ansible.builtin.copy:
     src: files/homeAssistant.tar.gz
-    dest: "{{ config_dir }}/home-assistant/homeassistant.tar.gz"
+    dest: "{{ docker_dir }}/home-assistant/homeassistant.tar.gz"
     mode: '0640'
   become: false
 
 - name: Unarchive HA config
   ansible.builtin.unarchive:
-    src: "{{ config_dir }}/home-assistant/homeassistant.tar.gz"
-    dest: "{{ config_dir }}/home-assistant/"
+    src: "{{ docker_dir }}/home-assistant/homeassistant.tar.gz"
+    dest: "{{ docker_dir }}/home-assistant/"
     remote_src: true
   become: false
 
 - name: Move leftover data to config
   ansible.builtin.shell: >
     rsync -av --remove-source-files
-    {{ config_dir }}/home-assistant/data/
-    {{ config_dir }}/home-assistant/config/
+    {{ docker_dir }}/home-assistant/data/
+    {{ docker_dir }}/home-assistant/config/
   become: false
