--- a/main.yml
+++ b/main.yml
@@ -8,24 +8,27 @@
       ansible.builtin.include_vars:
         file: config.yml
 
-    - name: Ensure apt cache is up to date.
-      ansible.builtin.apt:
-        update_cache: true
-        cache_valid_time: 3600
-      when: ansible_facts.os_family == "Debian"
+    # - name: Ensure apt cache is up to date.
+    #   ansible.builtin.apt:
+    #     update_cache: true
+    #     cache_valid_time: 3600
+    #   when: ansible_facts.os_family == "Debian"
 
-    - name: Include tasks to mount drives
-      ansible.builtin.import_tasks: tasks/mount_drives.yml
+    # - name: Include tasks to mount drives
+    #   ansible.builtin.import_tasks: tasks/mount_drives.yml
 
-    - name: Include tasks to install Docker
-      ansible.builtin.import_tasks: tasks/docker_install.yml
+    # - name: Include tasks to install Docker
+    #   ansible.builtin.import_tasks: tasks/docker_install.yml
 
   tasks:
-    - name: Include Home Assistant tasks
-      ansible.builtin.import_tasks: tasks/home_assistant.yml
+    # - name: Include Home Assistant tasks
+    #   ansible.builtin.import_tasks: tasks/home_assistant.yml
 
     - name: Include generic Docker services tasks
       ansible.builtin.import_tasks: tasks/docker_services.yml
+
+    - name: Include tailscale service managment
+      ansible.builtin.import_tasks: tasks/tailscale_clean.yml
 
   # handlers:
     - name: Restart Docker Services
