--- a/inventory.ini
+++ b/inventory.ini
@@ -1,5 +1,2 @@
-[internet_pi]
+[mattlab]
 server ansible_user=matt
-
-# Comment out the previous line and uncomment this to run inside Raspberry Pi.
-# 127.0.0.1 ansible_connection=local ansible_user=pi
